--- a/style/style.css
+++ b/style/style.css
@@ -2,3 +2,78 @@
     margin: 0;
     padding: 0;
 }
+
+/* REMOVE Arrows/Spinners
+ https://www.w3schools.com/howto/howto_css_hide_arrow_number.asp 
+ Chrome, Safari, Edge, Opera */
+
+input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
+.iziToast-wrapper {
+    margin-top: 40px;
+}
+
+#create_exercise {
+    margin: auto;
+    margin-top: 50px;
+    width: 288px;
+}
+
+#exercise_name {
+    margin: 0 15px;
+    padding: 0 10px;
+}
+
+#exercise_label {
+    margin-left: 10px;
+}
+
+label {
+    margin: auto;
+    margin-top: 5px;
+}
+
+.form_p {
+    margin-bottom: 0;
+    min-width: 70px;
+}
+
+.form-row {
+    /* margin: 5px 10px; */
+    justify-content: center;
+}
+
+.set_number:hover {
+    cursor: default;
+}
+
+.add_set {
+    background: rgb(193, 243, 136);
+    margin: 10px;
+}
+
+.delete_set {
+    background: rgb(253, 121, 121);
+    margin: 10px;
+}
+
+#submit_button {
+    margin: 0 10px;
+}
+
+.fas {
+    margin: 0 10px;
+}
+
+.add_set:hover, .delete_set:hover, .add_exercise:hover {
+    cursor: pointer;
+}
