--- a/style/style.css
+++ b/style/style.css
@@ -86,7 +86,6 @@ label {
 }
 
 .workout_current_set {
-    margin-left: 20px;
     padding: 5px;
     border: 1px solid lightgray;
     border-radius: 10px;
@@ -94,12 +93,13 @@ label {
 
 .workout_current_set_icon {
     float: right;
-    font-size: 20px;
+    font-size: 15px;
     margin-top: 2px;
     margin-right: 5px;
     background: #FD7979;
     padding: 5px;
     border-radius: 5px;
     margin-bottom: 2px;
-    margin-top: -3px;
+    margin-top: -0.01em;
+    ;
 }
