--- a/style/style.css
+++ b/style/style.css
@@ -91,6 +91,7 @@ label {
     border: 1px solid lightgray;
     border-radius: 10px;
     margin-bottom: 2px;
+    padding-right: 0px;
 }
 
 .workout_current_set_icon {
@@ -103,5 +104,17 @@ label {
     border-radius: 5px;
     margin-bottom: 2px;
     margin-top: -0.01em;
-    ;
+}
+
+.edit_icon {
+    float: right;
+    font-size: 15px;
+    margin-top: 2px;
+    margin-right: 5px;
+    background: #F6BB07;
+    padding: 5px;
+    border-radius: 5px;
+    margin-bottom: 2px;
+    margin-top: -0.01em;
+    width: 25px;
 }
